[package]
name = "prost-twirp"
version = "0.1.0"
authors = ["Chad Retz <chad.retz@gmail.com>"]
description = "Code generator and library for calling/serving Twirp services in Rust using prost and hyper"
license = "MIT"
repository = "https://github.com/cretz/prost-twirp"
documentation = "https://docs.rs/prost-twirp"
readme = "README.md"
exclude = ["examples/*"]
edition = "2018"

[features]
service-gen = ["prost-build"]

[dependencies]
futures-util = "0.3.8"
hyper = { version = "0.14.11", features = [ "client", "server", "tcp", "http1" ] }
http = "0.2.4"
prost = "0.8"
serde_json = "1.0"

prost-build = { version = "0.8", optional = true }
