[package]
name = "example-no-service-gen"
version = "0.1.0"
authors = ["Chad Retz <chad.retz@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
futures = "0.3.16"
hyper = "0.14.11"
prost = "0.8"
prost-derive = "0.8"
prost-twirp = { path = "../../" }
tokio = { version = "1.9", features = ["full"] }

[build-dependencies]
prost-build = "0.8"
