[package]
name = "example-service-gen-no-runtime"
version = "0.1.0"
authors = ["Chad Retz <chad.retz@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
futures = "0.3.16"
http = "0.2.4"
hyper = "0.14.11"
futures-util = "0.3.8"
prost = "0.8"
prost-derive = "0.8"
serde_json = "1.0"
tokio = { version = "1.9", features = ["full"] }

[build-dependencies]
prost-build = "0.8"
prost-twirp = { path = "../../", features = ["service-gen"] }
